--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
          <type>jar</type>
          <scope>compile</scope>
       </dependency>
+      <dependency>
+      	<groupId>org.apache.lucene</groupId>
+      	<artifactId>lucene-core</artifactId>
+      	<version>3.0.3</version>
+      	<type>jar</type>
+      	<scope>compile</scope>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
