--- a/.settings/org.maven.ide.eclipse.prefs
+++ b/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Tue Nov 30 07:56:32 CST 2010
+#Tue Oct 04 10:54:51 CDT 2011
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
