--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,13 @@
          <plugin>
             <groupId>edu.uiowa.icts.plugin</groupId>
             <artifactId>protogen-plugin</artifactId>
-            <version>0.0.4</version>
+            <version>0.0.6</version>
             <configuration>
                <props>
+                  <property>
+                     <name>generator.enabled</name>
+                     <value>false</value>
+                  </property>
                   <property>
                      <name>project.name</name>
                      <value>${project.artifactId}</value>
