--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.uiowa.icts.taglib</groupId>
    <artifactId>NIHFOATagLib</artifactId>
-   <version>0.0.1-SNAPSHOT</version>
+   <version>0.0.1</version>
    <name>NIHFOATagLib</name>
 
    <url>http://www.icts.uiowa.edu/confluence/display/apps/NIHFOATagLib</url>
    <scm>
-      <connection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/trunk</connection>
-      <developerConnection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/trunk</developerConnection>
-      <url>https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib</url>
+      <connection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.1</connection>
+      <developerConnection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.1</developerConnection>
+      <url>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.1</url>
    </scm>
    <distributionManagement>
       <repository>
