--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
          <plugin>
             <groupId>edu.uiowa.icts.plugin</groupId>
             <artifactId>protogen-plugin</artifactId>
-            <version>0.0.10</version>
+            <version>0.0.11-SNAPSHOT</version>
             <configuration>
                <props>
                   <property>
