--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.uiowa.icts.taglib</groupId>
    <artifactId>NIHFOATagLib</artifactId>
-   <version>0.0.4</version>
+   <version>0.0.5-SNAPSHOT</version>
    <name>NIHFOATagLib</name>
 
    <url>http://www.icts.uiowa.edu/confluence/display/apps/NIHFOATagLib</url>
    <scm>
-      <connection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.4</connection>
-      <developerConnection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.4</developerConnection>
-      <url>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/tags/NIHFOATagLib-0.0.4</url>
+      <connection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/trunk</connection>
+      <developerConnection>scm:svn:https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib/trunk</developerConnection>
+      <url>https://srcvault.icts.uiowa.edu/repos/TagLibs/NIHFOATagLib</url>
    </scm>
    <distributionManagement>
       <repository>
