--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,14 @@
       <dependency>
       	<groupId>org.apache.lucene</groupId>
       	<artifactId>lucene-core</artifactId>
-      	<version>3.0.3</version>
-      	<type>jar</type>
-      	<scope>compile</scope>
+      	<version>3.6.1</version>
+      	<scope>runtime</scope>
+      </dependency>
+      <dependency>
+      	<groupId>org.apache.lucene</groupId>
+      	<artifactId>lucene-analyzers</artifactId>
+      	<version>3.6.1</version>
+      	<scope>runtime</scope>
       </dependency>
    </dependencies>
    <build>
