--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,31 @@
          <artifactId>commons-logging</artifactId>
          <version>1.1.1</version>
       </dependency>
-      <dependency>
-      	<groupId>org.apache.lucene</groupId>
-      	<artifactId>lucene-core</artifactId>
-      	<version>3.6.1</version>
-      	<scope>runtime</scope>
-      </dependency>
-      <dependency>
-      	<groupId>org.apache.lucene</groupId>
-      	<artifactId>lucene-analyzers</artifactId>
-      	<version>3.6.1</version>
-      	<scope>runtime</scope>
-      </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queries</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-facet</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>4.3.0</version>
+        </dependency>
       <dependency>
       	<groupId>jaxen</groupId>
       	<artifactId>jaxen</artifactId>
@@ -131,7 +144,7 @@
             <executions>
                <execution>
                   <goals>
-                     <goal>WebApp</goal>
+<!--                      <goal>WebApp</goal> -->
                   </goals>
 
                </execution>
@@ -150,39 +163,10 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>2.0.2</version>
             <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
+               <source>1.8</source>
+               <target>1.8</target>
             </configuration>
          </plugin>
       </plugins>
-      <pluginManagement>
-			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>edu.uiowa.icts.plugin</groupId>
-										<artifactId>protogen-plugin</artifactId>
-										<versionRange>[0.0.9,)</versionRange>
-										<goals>
-											<goal>WebApp</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-   </build>
+    </build>
 </project>
